<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginFragment">


    <ImageView
        android:id="@+id/relative_img"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_margin="@dimen/_25sdp"
        android:background="@drawable/splash"
        android:contentDescription="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative_img"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textAllCaps="true"
            android:layout_marginStart="@dimen/_8sdp"
            android:fontFamily="@font/myfont"
            android:textColor="@color/grayText"
            android:textSize="@dimen/_23ssp"
            android:textStyle="italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_270sdp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:helperTextTextColor="#D00B0B"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mEditEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_270sdp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:helperTextTextColor="#D00B0B"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mEditPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--forget password-->

        <TextView
            android:id="@+id/forgetTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_3sdp"
            android:text="@string/forgetPassword"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold|italic" />


        <!--Login Button-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/LoginBtn"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/login"
            android:layout_gravity="center"
            android:background="@drawable/btnstyle"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <!--No Account Register -->
        <TextView
            android:id="@+id/noAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/new_user_signup"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold|italic" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>